k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nemesis-api
  namespace: nemesis
spec:
  selector:
    app: nemesis-api
  ports:
  - port: 8000
    targetPort: 8000
    name: http
  type: ClusterIP
