k8s/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nemesis-ingress
  namespace: nemesis
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.nemesis.com
    secretName: nemesis-tls
  rules:
  - host: api.nemesis.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nemesis-api
            port:
              number: 8000
